--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -22,4 +22,28 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
 
+  security-check:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v4
+    - name: Trivy installation
+      run: |
+        sudo apt-get install wget apt-transport-https gnupg lsb-release
+        wget -qO - https://aquasecurity.github.io/trivy-repo/deb/public.key | sudo apt-key add -
+        echo deb https://aquasecurity.github.io/trivy-repo/deb $(lsb_release -sc) main | sudo tee -a /etc/apt/sources.list.d/trivy.list
+        sudo apt-get update
+        sudo apt-get install trivy -y
+   
+    - name: Trivy fs scan   
+      run: trivy fs --format table -o fs-report.json
+
+    - name: gitleaks scan
+      run: sudo apt install gitleaks -y
+
+    - name: gitleaks code scan   
+      run: gitleaks detect source . -r gitleaks-report.json -f json
+
+
+      
   
