--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -28,22 +28,23 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Trivy installation
+    - name: Trivy Installation
       run: |
-        sudo apt-get install wget apt-transport-https gnupg lsb-release
+        sudo apt-get install -y wget apt-transport-https gnupg lsb-release
         wget -qO - https://aquasecurity.github.io/trivy-repo/deb/public.key | sudo apt-key add -
         echo deb https://aquasecurity.github.io/trivy-repo/deb $(lsb_release -sc) main | sudo tee -a /etc/apt/sources.list.d/trivy.list
         sudo apt-get update -y
-        sudo apt-get install trivy -y
-   
-    - name: Trivy fs scan   
-      run: trivy fs --format table -o fs-report.json
+        sudo apt-get install -y trivy
 
-    - name: gitleaks scan
+    - name: Trivy FS Scan
+      run: trivy fs --format table -o fs-report.json .
+
+    - name: Gitleaks Installation
       run: sudo apt install gitleaks -y
-
-    - name: gitleaks code scan   
+    - name: Gitleaks Code Scan
       run: gitleaks detect source . -r gitleaks-report.json -f json
+      
+
 
 
       
