--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -79,10 +79,9 @@ jobs:
         
     - uses: actions/checkout@v4
       with:
-        # Disabling shallow clones is recommended for improving the relevancy of reporting
         fetch-depth: 0
     - name: SonarQube Scan
-      uses: SonarSource/sonarqube-scan-action@v5.3.0 # Ex: v4.1.0, See the latest version at https://github.com/marketplace/actions/official-sonarqube-scan
+      uses: SonarSource/sonarqube-scan-action@v5.3.0
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         SONAR_HOST_URL: ${{ vars.SONAR_HOST_URL }}
@@ -121,7 +120,7 @@ jobs:
       with:
         context: .
         push: true
-        tags: karty11/bankapp:latest
+        tags: karty11/lbankapp:latest
         file: ./Dockerfile   
  
   deploy_to_kubernetes:
