--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -129,11 +129,11 @@ jobs:
     steps:
     - name: Checkout Code
       uses: actions/checkout@v4
-    - name: Install AWS CLI
+    - name: Update AWS CLI
       run: |
         curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
         unzip awscliv2.zip
-        sudo ./aws/install
+        sudo ./aws/install --update
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v2
       with:
