--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -120,7 +120,7 @@ jobs:
       with:
         context: .
         push: true
-        tags: karty11/lbankapp:latest
+        tags: karty11/newbankapp:latest
         file: ./Dockerfile   
  
   deploy_to_kubernetes:
