--- a/ds.yml
+++ b/ds.yml
@@ -55,7 +55,7 @@ spec:
     spec:
       containers:
       - name: bankapp
-        image: adijaiswal/bankapp:latest
+        image: karty11/newbankapp:latest
         ports:
         - containerPort: 8080
         env:
