--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -111,8 +111,17 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
+        with:
+         platforms: all
+         image: tonistiigi/binfmt:latest 
+         
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+        with:
+          install: true
+          use: true
+          driver-opts: image=moby/buildkit:latest
+          
       - name: Build and Push Docker image
         uses: docker/build-push-action@v6
         with:
