Update and rename CICD.yml to CI.yml

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,4 +1,4 @@
-name: CICD Pipeline
+name: CI Pipeline
 
 on:
   push:
@@ -7,7 +7,6 @@ on:
 jobs:
   compile:
     runs-on: self-hosted
-
     steps:
       - uses: actions/checkout@v4
       - name: Set up JDK 17
@@ -22,25 +21,18 @@ jobs:
   security-check:
     runs-on: self-hosted
     needs: compile
-
     steps:
       - uses: actions/checkout@v4
-      - name: Trivy Installation
+      - name: Install Trivy and Scan
         run: |
           sudo apt-get install -y wget apt-transport-https gnupg lsb-release
           wget -qO - https://aquasecurity.github.io/trivy-repo/deb/public.key | sudo apt-key add -
           echo deb https://aquasecurity.github.io/trivy-repo/deb $(lsb_release -sc) main | sudo tee -a /etc/apt/sources.list.d/trivy.list
           sudo apt-get update -y
           sudo apt-get install -y trivy
-
-      - name: Trivy FS Scan
-        run: trivy fs --format table -o fs-report.json .
-
-      - name: Gitleaks Installation
-        run: sudo apt install gitleaks -y
-
-      - name: Gitleaks Code Scan
-        run: gitleaks detect source . -r gitleaks-report.json -f json
+          trivy fs --format table -o fs-report.json .
+      - name: Gitleaks
+        run: sudo apt install gitleaks -y && gitleaks detect source . -r gitleaks-report.json -f json
 
   test:
     runs-on: self-hosted
@@ -74,16 +66,11 @@ jobs:
         with:
           name: app-jar
           path: target/*.jar
-
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
       - name: SonarQube Scan
         uses: SonarSource/sonarqube-scan-action@v5.3.0
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ vars.SONAR_HOST_URL }}
-
       - name: SonarQube Quality Gate check
         id: sonarqube-quality-gate-check
         uses: sonarsource/sonarqube-quality-gate-action@master
@@ -102,8 +89,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: app-jar
-          path: app  # this will download JAR to ./app folder
-
+          path: app
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
@@ -111,17 +97,8 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
-        with:
-         platforms: all
-         image: tonistiigi/binfmt:latest 
-         
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-        with:
-          install: true
-          use: true
-          driver-opts: image=moby/buildkit:latest
-          
       - name: Build and Push Docker image
         uses: docker/build-push-action@v6
         with:
@@ -131,51 +108,3 @@ jobs:
             karty11/newbankapp:latest
             karty11/newbankapp:${{ github.sha }}
           file: ./Dockerfile
-
-  deploy_to_kubernetes:
-    runs-on: self-hosted
-    needs: builds_docker_image_and_push
-    if: success()
-    env:
-      IMAGE_TAG: ${{ github.sha }}
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
-      - name: Update AWS CLI
-        run: |
-          curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-          unzip awscliv2.zip
-          sudo ./aws/install --update
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-west-2
-
-      - name: Set up kubectl
-        uses: azure/setup-kubectl@v3
-        with:
-          version: latest
-
-      - name: Configure kubeconfig
-        run: |
-          mkdir -p $HOME/.kube
-          echo "${{ secrets.EKS_KUBECONFIG }}" > $HOME/.kube/config
-
-      - name: Install Helm
-        uses: azure/setup-helm@v3
-        with:
-          version: v3.13.3
-
-      - name: Create Namespace if Not Exists
-        run: |
-          kubectl get ns devproject || kubectl create ns devproject    
-
-      - name: Deploy with Helm
-        run: |
-          helm upgrade --install bankapp ./helm/bankapp-chart \
-            --namespace devproject \
-            --create-namespace \
-            --set image.repository=karty11/newbankapp \
-            --set image.tag=$IMAGE_TAG
