--- a/helm/bankapp-chart/templates/bankapp-deployment.yaml
+++ b/helm/bankapp-chart/templates/bankapp-deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: bankapp
+  namespace: devproject
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
@@ -15,12 +16,17 @@ spec:
       containers:
         - name: bankapp
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          env:
+            - name: DB_HOST
+              value: mysql
+            - name: DB_USER
+              value: {{ .Values.mysql.user }}
+            - name: DB_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: {{ .Values.mysql.secretName }}
+                  key: MYSQL_ROOT_PASSWORD
+            - name: DB_NAME
+              value: {{ .Values.mysql.database }}
           ports:
             - containerPort: 8080
-          env:
-            - name: SPRING_DATASOURCE_URL
-              value: jdbc:mysql://mysql-service:3306/{{ .Values.mysql.database }}?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-            - name: SPRING_DATASOURCE_USERNAME
-              value: root
-            - name: SPRING_DATASOURCE_PASSWORD
-              value: {{ .Values.mysql.rootPassword | quote }}
