--- a/helm/bankapp-chart/templates/externalsecret.yaml
+++ b/helm/bankapp-chart/templates/externalsecret.yaml
@@ -9,7 +9,7 @@ spec:
     kind: ClusterSecretStore
     name: aws-secretsmanager
   target:
-    name: {{ .Values.mysql.secretName }}
+    name: mysql-secret
     creationPolicy: Owner
   data:
     - secretKey: MYSQL_ROOT_PASSWORD
