--- a/helm/bankapp-chart/templates/argocd-application.yaml
+++ b/helm/bankapp-chart/templates/argocd-application.yaml
@@ -1,3 +1,4 @@
+# ESO Application
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
@@ -8,19 +9,33 @@ spec:
   source:
     repoURL: "https://charts.external-secrets.io"
     chart: external-secrets
-    targetRevision: 0.9.19  # latest stable version
+    targetRevision: 0.9.19
     helm:
       releaseName: external-secrets
-      values: |
-        serviceAccount:
-          create: true
-          name: external-secrets
-          annotations:
-            eks.amazonaws.com/role-arn: arn:aws:iam::<ACCOUNT_ID>:role/external-secrets-irsa
   destination:
     server: https://kubernetes.default.svc
     namespace: external-secrets
   syncPolicy:
     automated:
-      selfHeal: true
       prune: true
+      selfHeal: true
+---
+# BankApp Application
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: bankapp
+  namespace: argocd
+spec:
+  project: default
+  source:
+    repoURL: 'https://github.com/karty11/Github-Actions-Project.git'
+    targetRevision: main
+    path: helm/bankapp-chart
+  destination:
+    server: https://kubernetes.default.svc
+    namespace: devproject
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
