cd code updated

--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -36,6 +36,13 @@ jobs:
           mkdir -p $HOME/.kube
           echo "${{ secrets.EKS_KUBECONFIG }}" > $HOME/.kube/config
 
+      - name: Install ArgoCD
+        run: |
+           kubectl create namespace argocd || true
+           kubectl apply -n argocd -f https://raw.githubusercontent.com/argoproj/argo-cd/stable/manifests/install.yaml
+           kubectl rollout status deployment/argocd-server -n argocd
+    
+
       - name: Apply ESO ArgoCD Application
         run: |
           kubectl apply -f helm/applications/eso-application.yaml
