--- a/helm/applications/eso-application.yaml
+++ b/helm/applications/eso-application.yaml
@@ -15,6 +15,8 @@ spec:
     server: https://kubernetes.default.svc
     namespace: external-secrets
   syncPolicy:
+    syncOptions:
+      - CreateNamespace=true
     automated:
       prune: true
       selfHeal: true
