--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -38,22 +38,23 @@ jobs:
 
       - name: Install ArgoCD
         run: |
-           kubectl create namespace argocd || true
-           kubectl apply -n argocd -f https://raw.githubusercontent.com/argoproj/argo-cd/stable/manifests/install.yaml
-           kubectl rollout status deployment/argocd-server -n argocd
+          kubectl create namespace argocd || true
+          kubectl apply -n argocd -f https://raw.githubusercontent.com/argoproj/argo-cd/stable/manifests/install.yaml
+          kubectl rollout status deployment/argocd-server -n argocd --timeout=180s
 
-      - name: Wait for ArgoCD to be Ready
+      - name: Wait for ArgoCD components to be Ready
         run: |
-         kubectl rollout status deployment/argocd-application-controller -n argocd --timeout=180s
-         kubectl rollout status deployment/argocd-repo-server -n argocd --timeout=180s
-         kubectl rollout status deployment/argocd-server -n argocd --timeout=180s
+          kubectl rollout status deployment/argocd-application-controller -n argocd --timeout=180s
+          kubectl rollout status deployment/argocd-repo-server -n argocd --timeout=180s
 
       - name: Apply ESO ArgoCD Application
         run: |
           kubectl apply -f helm/applications/eso-application.yaml
-          kubectl -n argocd wait application/external-secrets --for condition=Synced --timeout=600s
+          kubectl -n argocd wait application/external-secrets --for condition=Synced --timeout=600s || true
+          kubectl get applications -n argocd external-secrets -o wide
 
       - name: Apply BankApp ArgoCD Application
         run: |
           kubectl apply -f helm/applications/bankapp-application.yaml
-          kubectl -n argocd wait application/bankapp --for condition=Synced --timeout=600s
+          kubectl -n argocd wait application/bankapp --for condition=Synced --timeout=600s || true
+          kubectl get applications -n argocd bankapp -o wide
