--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -42,10 +42,9 @@ jobs:
           kubectl apply -n argocd -f https://raw.githubusercontent.com/argoproj/argo-cd/stable/manifests/install.yaml
           kubectl rollout status deployment/argocd-server -n argocd --timeout=180s
 
-      - name: Wait for ArgoCD components to be Ready
+      - name: Wait for ArgoCD to be Ready
         run: |
-          kubectl rollout status deployment/argocd-application-controller -n argocd --timeout=180s
-          kubectl rollout status deployment/argocd-repo-server -n argocd --timeout=180s
+          kubectl wait --for=condition=Ready pod -l app.kubernetes.io/part-of=argocd -n argocd --timeout=300s
 
       - name: Apply ESO ArgoCD Application
         run: |
