--- a/helm/applications/bankapp-application.yaml
+++ b/helm/applications/bankapp-application.yaml
@@ -13,6 +13,8 @@ spec:
     server: https://kubernetes.default.svc
     namespace: devproject
   syncPolicy:
+    syncOptions:
+      - CreateNamespace=true
     automated:
       prune: true
       selfHeal: true
