--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -59,9 +59,9 @@ jobs:
          terraform -version
          terragrunt -version    
 
-      - name: Create external-secrets namespace
-        run: |
-          kubectl create namespace external-secrets || true
+      # - name: Create external-secrets namespace
+      #   run: |
+      #     kubectl create namespace external-secrets || true
 
       - name: Deploy External Secrets IRSA (Terraform)
         run: |
