--- a/helm/applications/eso-application.yaml
+++ b/helm/applications/eso-application.yaml
@@ -1,3 +1,4 @@
+
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
@@ -6,17 +7,52 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: "https://charts.external-secrets.io"
-    chart: external-secrets
-    targetRevision: 0.9.19
-    helm:
-      releaseName: external-secrets
+    repoURL: 'https://github.com/karty11/Github-Actions-Project.git'
+    targetRevision: main
+    path: helm/manifests
   destination:
     server: https://kubernetes.default.svc
     namespace: external-secrets
   syncPolicy:
-    syncOptions:
-      - CreateNamespace=true
     automated:
       prune: true
       selfHeal: true
+    syncOptions:
+      - CreateNamespace=true
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+# apiVersion: argoproj.io/v1alpha1
+# kind: Application
+# metadata:
+#   name: external-secrets
+#   namespace: argocd
+# spec:
+#   project: default
+#   source:
+#     repoURL: "https://charts.external-secrets.io"
+#     chart: external-secrets
+#     targetRevision: 0.9.19
+#     helm:
+#       releaseName: external-secrets
+#   destination:
+#     server: https://kubernetes.default.svc
+#     namespace: external-secrets
+#   syncPolicy:
+#     syncOptions:
+#       - CreateNamespace=true
+#     automated:
+#       prune: true
+#       selfHeal: true
