--- a/helm/bankapp-chart/templates/bankapp-service.yaml
+++ b/helm/bankapp-chart/templates/bankapp-service.yaml
@@ -1,11 +1,31 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: bankapp-service
+  name: bankapp
+  labels:
+    app: bankapp
 spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
       targetPort: 8080
+      protocol: TCP
+      name: http
   selector:
     app: bankapp
+
+
+
+
+
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: bankapp-service
+# spec:
+#   type: {{ .Values.service.type }}
+#   ports:
+#     - port: {{ .Values.service.port }}
+#       targetPort: 8080
+#   selector:
+#     app: bankapp
