--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -1,14 +1,18 @@
 name: CD Pipeline
 
-on:
-  workflow_run:
-    workflows: ["CI Pipeline"]
-    types:
-      - completed
+# on:
+#   workflow_run:
+#     workflows: ["CI Pipeline"]
+#     types:
+#       - completed
       
-  push:
-    branches:
-      - main
+#   push:
+#     branches:
+#       - main
+
+on:
+  workflow_dispatch:  # <-- manual trigger only
+
 jobs:
   deploy_to_kubernetes:
     runs-on: self-hosted
