--- a/helm/applications/eso-application.yaml
+++ b/helm/applications/eso-application.yaml
@@ -1,4 +1,3 @@
-
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
@@ -6,19 +5,59 @@ metadata:
   namespace: argocd
 spec:
   project: default
-  source:
-    repoURL: 'https://github.com/karty11/Github-Actions-Project.git'
-    targetRevision: main
-    path: helm/manifests
   destination:
-    server: https://kubernetes.default.svc
     namespace: external-secrets
+    server: https://kubernetes.default.svc
+  source:
+    repoURL: https://charts.external-secrets.io
+    targetRevision: 0.9.x   # pick the latest release
+    chart: external-secrets
+    helm:
+      values: |
+        serviceAccount:
+          create: false
+          name: external-secrets
   syncPolicy:
     automated:
       prune: true
       selfHeal: true
-    syncOptions:
-      - CreateNamespace=true
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+# apiVersion: argoproj.io/v1alpha1
+# kind: Application
+# metadata:
+#   name: external-secrets
+#   namespace: argocd
+# spec:
+#   project: default
+#   source:
+#     repoURL: 'https://github.com/karty11/Github-Actions-Project.git'
+#     targetRevision: main
+#     path: helm/manifests
+#   destination:
+#     server: https://kubernetes.default.svc
+#     namespace: external-secrets
+#   syncPolicy:
+#     automated:
+#       prune: true
+#       selfHeal: true
+#     syncOptions:
+#       - CreateNamespace=true
 
 
 
