--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,8 +1,12 @@
 name: CI Pipeline
 
+# on:
+#   push:
+#     branches: [ "main" ]
+
 on:
-  push:
-    branches: [ "main" ]
+  workflow_dispatch:  # <-- manual trigger only
+  
 jobs:
   compile:
     runs-on: self-hosted
