--- a/helm/manifests/secretstore.yaml
+++ b/helm/manifests/secretstore.yaml
@@ -3,6 +3,8 @@ kind: SecretStore
 metadata:
   name: aws-secrets-manager
   namespace: external-secrets
+  annotations:
+    argocd.argoproj.io/sync-wave: "1"
 spec:
   provider:
     aws:
