--- a/helm/applications/eso-application.yaml
+++ b/helm/applications/eso-application.yaml
@@ -4,7 +4,7 @@ metadata:
   name: external-secrets
   namespace: argocd
   annotations:
-    argocd.argoproj.io/sync-wave: "0"
+    argocd.argoproj.io/sync-wave: "0"   # 🚀 install ESO first
 spec:
   project: default
   destination:
@@ -12,7 +12,8 @@ spec:
     server: https://kubernetes.default.svc
   source:
     repoURL: https://charts.external-secrets.io
-    targetRevision: 0.9.13  # latest stable
+    chart: external-secrets            # 👈 REQUIRED
+    targetRevision: 0.9.13             # latest stable
     helm:
       values: |
         serviceAccount:
@@ -24,6 +25,7 @@ spec:
       selfHeal: true
     syncOptions:
       - CreateNamespace=true
+
 
 
 
