--- a/helm/manifests/secrets/secretstore.yaml
+++ b/helm/manifests/secrets/secretstore.yaml
@@ -1,30 +1,15 @@
-apiVersion: argoproj.io/v1alpha1
-kind: Application
+apiVersion: external-secrets.io/v1beta1
+kind: SecretStore
 metadata:
-  name: external-secrets
-  namespace: argocd
-  annotations:
-    argocd.argoproj.io/sync-wave: "0"   
+  name: aws-secrets-manager
+  namespace: external-secrets
 spec:
-  project: default
-  destination:
-    namespace: external-secrets
-    server: https://kubernetes.default.svc
-  source:
-    repoURL: https://charts.external-secrets.io
-    chart: external-secrets
-    targetRevision: 0.9.13  
-    helm:
-      parameters:
-        - name: installCRDs
-          value: "true"       
-      values: |
-        serviceAccount:
-          create: false
-          name: external-secrets   
-  syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
-    syncOptions:
-      - CreateNamespace=true
+  provider:
+    aws:
+      service: SecretsManager
+      region: us-west-2
+      auth:
+        jwt:
+          serviceAccountRef:
+            name: external-secrets
+            namespace: external-secrets
