--- a/helm/manifests/secrets/externalsecret.yaml
+++ b/helm/manifests/secrets/externalsecret.yaml
@@ -1,30 +1,23 @@
-apiVersion: argoproj.io/v1alpha1
-kind: Application
+apiVersion: external-secrets.io/v1beta1
+kind: ExternalSecret
 metadata:
-  name: external-secrets
-  namespace: argocd
-  annotations:
-    argocd.argoproj.io/sync-wave: "0"   # 🚀 install ESO first
+  name: mysql-secret
+  namespace: bankapp
 spec:
-  project: default
-  destination:
-    namespace: external-secrets
-    server: https://kubernetes.default.svc
-  source:
-    repoURL: https://charts.external-secrets.io
-    chart: external-secrets
-    targetRevision: 0.9.13   # latest stable release
-    helm:
-      parameters:
-        - name: installCRDs
-          value: "true"       # 👈 ensures CRDs are installed
-      values: |
-        serviceAccount:
-          create: false
-          name: external-secrets   # reuse IRSA service account from Terraform
-  syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
-    syncOptions:
-      - CreateNamespace=true
+  refreshInterval: 1h
+  secretStoreRef:
+    name: aws-secrets-manager
+    kind: SecretStore
+  target:
+    name: mysql-secret
+    creationPolicy: Owner
+  data:
+    - secretKey: username
+      remoteRef:
+        key: mysql-secret
+        property: username
+    - secretKey: password
+      remoteRef:
+        key: mysql-secret
+        property: password
+
