--- a/helm/manifests/secretstore.yaml
+++ b/helm/manifests/secretstore.yaml
@@ -1,17 +1,15 @@
-# apiVersion: external-secrets.io/v1beta1
-# kind: SecretStore
-# metadata:
-#   name: aws-secrets-manager
-#   namespace: external-secrets
-#   annotations:
-#     argocd.argoproj.io/sync-wave: "1"
-# spec:
-#   provider:
-#     aws:
-#       service: SecretsManager
-#       region: us-west-2
-#       auth:
-#         jwt:
-#           serviceAccountRef:
-#             name: external-secrets     # Matches the SA Terraform created
-#             namespace: external-secrets
+apiVersion: external-secrets.io/v1beta1
+kind: SecretStore
+metadata:
+  name: aws-secrets-manager
+  namespace: external-secrets
+spec:
+  provider:
+    aws:
+      service: SecretsManager
+      region: us-west-2
+      auth:
+        jwt:
+          serviceAccountRef:
+            name: external-secrets
+            namespace: external-secrets
