--- a/helm/manifests/secrets/bankapp/externalsecret-mysql.yaml
+++ b/helm/manifests/secrets/bankapp/externalsecret-mysql.yaml
@@ -1,22 +1,22 @@
-apiVersion: argoproj.io/v1alpha1
-kind: Application
+apiVersion: external-secrets.io/v1beta1
+kind: ExternalSecret
 metadata:
-  name: bankapp-secrets
-  namespace: argocd
-  annotations:
-    argocd.argoproj.io/sync-wave: "1"
+  name: mysql-secret
+  namespace: bankapp
 spec:
-  project: default
-  source:
-    repoURL: 'https://github.com/karty11/Github-Actions-Project.git'
-    targetRevision: main
-    path: helm/manifests/secrets
-  destination:
-    server: https://kubernetes.default.svc
-    namespace: bankapp
-  syncPolicy:
-    syncOptions:
-      - CreateNamespace=true
-    automated:
-      prune: true
-      selfHeal: true
+  refreshInterval: 1h
+  secretStoreRef:
+    name: aws-secrets-manager
+    kind: SecretStore
+  target:
+    name: mysql-secret
+    creationPolicy: Owner
+  data:
+    - secretKey: username
+      remoteRef:
+        key: mysql-secret
+        property: username
+    - secretKey: password
+      remoteRef:
+        key: mysql-secret
+        property: password
