--- a/helm/applications/root-application.yaml
+++ b/helm/applications/root-application.yaml
@@ -11,9 +11,9 @@ spec:
   source:
     repoURL: https://github.com/karty11/Github-Actions-Project.git
     targetRevision: main
-    path: helm/applications       # 👈 points to all your app manifests
+    path: helm/applications       
     directory:
-      recurse: true               # 👈 picks up all apps inside this folder
+      recurse: true               
   syncPolicy:
     automated:
       prune: true
