--- a/helm/applications/eso-application.yaml
+++ b/helm/applications/eso-application.yaml
@@ -15,6 +15,7 @@ spec:
     chart: external-secrets
     targetRevision: 0.9.13   
     helm:
+      skipCrds: false
       parameters:
         - name: installCRDs      
           value: "true"
