--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -80,14 +80,14 @@ jobs:
       - name: Install ArgoCD
         run: |
           kubectl create namespace argocd || true
-          kubectl apply -n argocd -f https://raw.githubusercontent.com/argoproj/argo-cd/stable/manifests/install.yaml
+          kubectl apply -n argocd -f https://github.com/karty11/Kube/blob/main/Project_EKS/Argocd/argocdserver.yaml
           kubectl rollout status deployment/argocd-server -n argocd --timeout=180s
      
-      - name: Get ArgoCD LoadBalancer IP
-        id: get_ip
-        run: |
-         LB_IP=$(kubectl get svc argocd-server -n argocd -o jsonpath='{.status.loadBalancer.ingress[0].ip}')
-         echo "ARGOCD_LB_IP=$LB_IP" >> $GITHUB_ENV  
+      # - name: Get ArgoCD LoadBalancer IP
+      #   id: get_ip
+      #   run: |
+      #    LB_IP=$(kubectl get svc argocd-server -n argocd -o jsonpath='{.status.loadBalancer.ingress[0].ip}')
+      #    echo "ARGOCD_LB_IP=$LB_IP" >> $GITHUB_ENV  
 
       - name: Apply ArgoCD Ingress
         run: kubectl apply -f helm/ingress/argocd-ingress.yaml   
