--- a/helm/bankapp-chart/values.yaml
+++ b/helm/bankapp-chart/values.yaml
@@ -14,6 +14,18 @@ mysqlSecret:
   usernameKey: username
   passwordKey: password
 
+server:
+  service:
+    type: LoadBalancer
+  ingress:
+    enabled: false
+
+configs:
+  cm:
+    application.instanceLabelKey: argocd.argoproj.io/instance
+  rbac:
+    policy.default: role:readonly
+
 
 
 
