--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -73,7 +73,14 @@ jobs:
           cd infra/resources
           terragrunt init
           terragrunt apply --terragrunt-non-interactive -auto-approve --terragrunt-log-level debug
+          
+          helm repo add external-secrets https://charts.external-secrets.io
+          helm repo update
 
+          helm upgrade --install external-secrets external-secrets/external-secrets \
+            --namespace external-secrets --create-namespace \
+            --values helm/bankapp-chart/values.yaml \
+            --set installCRDs=true
       # ----------------------------
       # ArgoCD + External Secrets
       # ----------------------------
