--- a/helm/bankapp-chart/values.yaml
+++ b/helm/bankapp-chart/values.yaml
@@ -9,7 +9,7 @@ service:
   type: ClusterIP
   port: 8080
 
-mysqlSecret:
+mysql:
   name: mysql-secret
   usernameKey: username
   passwordKey: password
