--- a/helm/bankapp-chart/templates/mysql-deployment.yaml
+++ b/helm/bankapp-chart/templates/mysql-deployment.yaml
@@ -20,9 +20,9 @@ spec:
             - name: MYSQL_ROOT_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: {{ .Values.mysqlSecret.name }}
-                  key: {{ .Values.mysqlSecret.passwordKey }}
+                  name: {{ .Values.mysql.name }}
+                  key: {{ .Values.mysql.passwordKey }}
             - name: MYSQL_DATABASE
-              value: {{ default "bankdb" .Values.mysqlSecret.database }}
+              value: {{ default "bankdb" .Values.mysql.database }}
           ports:
             - containerPort: 3306
